tests/ui/overflow_err.rs
use enum_parity::bit_parity;

#[bit_parity(even)]
#[repr(u8)]
enum TooBig {
    Aa,
    Ab,
    Ac,
    Ad,
    Ae,
    Af,
    Ag,
    Ah,
    Ai,
    Aj,
    Ak,
    Al,
    Am,
    An,
    Ao,
    Ap,
    Aq,
    Ar,
    As,
    At,
    Au,
    Av,
    Aw,
    Ax,
    Ay,
    Az,
    // 26
    Ba,
    Bb,
    Bc,
    Bd,
    Be,
    Bf,
    Bg,
    Bh,
    Bi,
    Bj,
    Bk,
    Bl,
    Bm,
    Bn,
    Bo,
    Bp,
    Bq,
    Br,
    Bs,
    Bt,
    Bu,
    Bv,
    Bw,
    Bx,
    By,
    Bz,
    // 52
    Ca,
    Cb,
    Cc,
    Cd,
    Ce,
    Cf,
    Cg,
    Ch,
    Ci,
    Cj,
    Ck,
    Cl,
    Cm,
    Cn,
    Co,
    Cp,
    Cq,
    Cr,
    Cs,
    Ct,
    Cu,
    Cv,
    Cw,
    Cx,
    Cy,
    Cz,
    // 78
    Da,
    Db,
    Dc,
    Dd,
    De,
    Df,
    Dg,
    Dh,
    Di,
    Dj,
    Dk,
    Dl,
    Dm,
    Dn,
    Do,
    Dp,
    Dq,
    Dr,
    Ds,
    Dt,
    Du,
    Dv,
    Dw,
    Dx,
    Dy,
    Dz,
    // 104
    Ea,
    Eb,
    Ec,
    Ed,
    Ee,
    Ef,
    Eg,
    Eh,
    Ei,
    Ej,
    Ek,
    El,
    Em,
    En,
    Eo,
    Ep,
    Eq,
    Er,
    Es,
    Et,
    Eu,
    Ev,
    Ew,
    Ex,
    Ey,
    Ez,
    // 130 --  Too Many for a u8 repr
}

fn main() {}
